--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
@@ -48,7 +48,7 @@ MASH is a framework for simulating human health events and related phenomena (\e
 
 The collection of all mechanistic models of human malaria have the same basic structural parts: a model of human malaria infection and immunity; a model of mosquito populations, including infection and development of malaria parasites; and some model of immature mosquito  populations in their aquatic habitats. In MASH, each one of these parts is called a \verb1COMPONENT1. Four distinct biological processes determine how these three components interact: malaria parasites can be passed from mosquitoes to infect humans when mosquitoes probe in anticipation of taking a blood meal; parasites infecting humans can be passed in the blood meal, infecting mosquitoes; adult mosquitoes lay eggs in aquatic habitats; and the eggs hatch, develop through four larval instars, then pupate and emerge as imago (the mature form) from the aquatic habitats to begin their lives as volant adults. A structure allowing MASH components to interact is called a \verb1QUEUE1. In its most general form, transmission describes the events when pathogens are transmitted, either from mosquitoes to humans or {\em vice versa}, but it also the dispersion of pathogens, the distances traveled by the pathogens between infection events. The \verb1LANDSCAPE1 is the part of the model that determines how dispersion is defined. 
 
-To be truly plug-and-play, it must be possible to represent any other component trivially as a parameter, which is what we have done here. MBITES is the exquisitely detailed module for simulating the blood feeding behavior of adult mosquito populations. This document also describes how MBITES is coupled to the component describing the aquatic ecology. We describe how MBITES can be used to simulate pathogen transmission among populations of humans and mosquitoes; here we describe how that would happen without actually simulating transmission.  
+To be truly plug-and-play, it must be possible to run a component in standalone mode, by passing the inputs from other components trivially as parameters. This is what we have done here. MBITES is the exquisitely detailed module for simulating the blood feeding behavior of adult mosquito populations. This document also describes how MBITES is coupled to the component describing the aquatic ecology. We describe how MBITES can be used to simulate pathogen transmission among populations of humans and mosquitoes; here we describe how that would happen without actually simulating transmission.  
 
 The structure of MASH is summarized in the following way:
 \begin{itemize}
