--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-UsersGuide.Rnw
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-UsersGuide.Rnw
@@ -8,12 +8,12 @@
 \begin{document}
 
 \begin{centering}
-\huge{A User's Guide to MBITES}\\
-\vspace{0.3in}
-\Large{Mosquito Bout-based and Individual-based \\ Transmission Ecology Simulator}\\
-
-\vspace{0.3in}
-\large{MBITES Development Team: \\ Sean Wu, Hector Sanchez, Qian Zhang, John Henry, Daniel Citron, Amit Verma, Arnaud Le Menach, David L Smith\\}
+\Huge{MBITES}\\
+\large{Mosquito Bout-based and Individual-based \\ Transmission Ecology Simulator}\\
+\vspace{0.2in}
+\huge{A User's Guide} \\
+\vspace{0.2in}
+\large{\underline {MBITES Development Team:} \\ Sean Wu, Hector Sanchez, Qian Zhang, John Henry, Daniel Citron, Amit Verma, Arnaud Le Menach, David L Smith\\}
 
 \end{centering}
 
@@ -21,31 +21,44 @@
 
 \SweaveOpts{concordance=TRUE}
 
-\paragraph{Introduction}
+\vspace{1in}
+
+This document is a users guide to MBITES (Mosquito Bout-based and Individual-based Transmission Ecology Simulator). It is designed to give an oveview of the software for developers and users. It is one of three introductory documents for MBITES: 
+\begin{itemize}
+\item MBITES: A User's Guide 
+\item MBITES: Mosquito Behavior and Options
+\item MBITES: The Micro-Epidemiological Landscape
+\end{itemize}
+Other documents describing MBITES include a manuscript for peer review and R documentation \footnote{Wu S, S{\' a}nchez-Castellanos H, Henry J, Zhang Q, Citron D, Verma A, Reiner RC Jr., Smith DL. Vector bionomics and vectorial capacity as emergent properties of mosquito behavior and ecology. For submission to {\em PLoS Computational Biology}.}. 
+
+The code for MBITES is being developed for a public release, and will soon be published in a permanent archive.
+
+\clearpage 
+
+\paragraph{What is MBITES?}
 
 \begin{displayquote}
-{\bf \em What is MBITES?}
+{\em \bf Mosquito Bout-based \& Individual-based \\Transmission Ecology Simulator}
 \end{displayquote}
 
-This document is a users guide to MBITES (Mosquito Bout-based and Individual-based Transmission Ecology Simulator), a software package for simulating mosquito-borne pathogen transmission and vector control. 
+MBITES is a software package for simulating adult mosquito ecology and behavior oriented towards analysis of problems related to mosquito-borne pathogen transmission and vector control. MBITES is comprised of several parts: a {\bf landscape} describing resources used by adult mosquitoes; the algorithms describing adult behavior as a sequence of flight {\bf bouts}; a set of configurable {\bf options} for simulating other aspects of mosquito life-history and behavior; {\bf vector control}; and the aquatic ecology. The following five sections describe these parts of MBITES. Each section begins with a brief summary or heuristic followed by implementation notes, relevant details, and a guide to the R code. 
 
-MBITES is comprised of several parts: a {\bf landscape} describing resources used by adult mosquitoes; the algorithms describing adult behavior as a sequence of flight {\bf bouts}; a set of configurable {\bf options} for simulating other aspects of mosquito life-history and behavior; {\bf vector control}; and the aquatic ecology. MBITES also includes functionality for simulating pathogen transmission as part of a larger software package called MASH (Modular Analysis through Simulation of human Health). 
-
-The following five sections describe these parts of MBITES. Each section begins with a brief summary or
-heuristic followed by implementation notes, relevant details, and a guide to the R code. 
-
-
-\paragraph{The MASH Framework}
+\paragraph{What is MASH?}
 
 \begin{displayquote}
-{\em {\bf NOTE:} The following section gives some background and vocabulary for understanding some of the basic concepts and design principles of MASH and MBITES. We recommend reading it at some point, but feel free to skip it if you want to get on with learning MBITES.}
+{\em {\bf Modular Analysis and Simulation for Health}}
 \end{displayquote}
 
-MBITES is a flexible module that runs the adult mosquito component of MASH. The terms ``component'' and ``module'' and ``flexible'' all have a specific meaning in MASH. The following section explains the terminology used in MBITES and MASH and the rationale for developing it.  
 
-MASH is a framework for simulating human health events and related phenomena (\eg pathogen transmission by mosquito populations). MASH is a simulation modeling framework, not a simulation model. To put it another way, the problem MASH was trying to solve was how to build a plug-and-play simulator for human health, not how to simulate human health. The core design problem for MASH was how to build an API (application program interface) defining how various components of a model interact. The philosophy of MASH was that every component should have at least two modules: one would be highly realistic and simulate the relevant phenomena in exquisite detail, and the other would be dead simple. The first disease to be implemented within MASH was malaria. 
+\begin{displayquote}
+{\em {\bf NOTE:} The following section gives some background on the basic concepts and design principles of MASH. We recommend reading it at some point, but feel free to skip it if you want to get on with learning MBITES.}
+\end{displayquote}
 
-The collection of all mechanistic models of human malaria have the same basic structural parts: a model of human malaria infection and immunity; a model of mosquito populations, including infection and development of malaria parasites; and some model of immature mosquito  populations in their aquatic habitats. In MASH, each one of these parts is called a \verb1COMPONENT1. Four distinct biological processes determine how these three components interact: malaria parasites can be passed from mosquitoes to infect humans when mosquitoes probe in anticipation of taking a blood meal; parasites infecting humans can be passed in the blood meal, infecting mosquitoes; adult mosquitoes lay eggs in aquatic habitats; and the eggs hatch, develop through four larval instars, then pupate and emerge as imago (the mature form) from the aquatic habitats to begin their lives as volant adults. A structure allowing MASH components to interact is called a \verb1QUEUE1. In its most general form, transmission describes the events when pathogens are transmitted, either from mosquitoes to humans or {\em vice versa}, but it also the dispersion of pathogens, the distances traveled by the pathogens between infection events. The \verb1LANDSCAPE1 is the part of the model that determines how dispersion is defined. 
+MASH is a framework for simulating human health events and related phenomena (\eg pathogen transmission by mosquito populations). MBITES is a flexible module that runs the adult mosquito component of MASH. The terms ``component'' and ``module'' and ``flexible'' all have a specific meaning in MASH. The following section explains the terminology used in MBITES and MASH and the rationale for developing it.
+
+MASH is a simulation modeling framework, not a simulation model. To put it another way, the problem MASH was trying to solve was how to build a plug-and-play simulator for human health, not how to simulate human health. The core design problem for MASH was how to build an API (application program interface) defining how various components of a model interact. The philosophy of MASH was that every component should have at least two modules: one would be highly realistic and simulate the relevant phenomena in exquisite detail. Another would be dead simple. 
+
+The first disease to be implemented within MASH was malaria. The collection of all mechanistic models of human malaria have the same basic structural parts: a model of human malaria infection and immunity; a model of mosquito populations, including infection and development of malaria parasites; and some model of immature mosquito  populations in their aquatic habitats. In MASH, each one of these parts is called a \verb1COMPONENT1. Four distinct biological processes determine how these three components interact: malaria parasites can be passed from mosquitoes to infect humans when mosquitoes probe in anticipation of taking a blood meal; parasites infecting humans can be passed in the blood meal, infecting mosquitoes; adult mosquitoes lay eggs in aquatic habitats; and the eggs hatch, develop through four larval instars, then pupate and emerge as imago (the mature form) from the aquatic habitats to begin their lives as volant adults. A structure allowing MASH components to interact is called a \verb1QUEUE1. In its most general form, transmission describes the events when pathogens are transmitted, either from mosquitoes to humans or {\em vice versa}, but it also the dispersion of pathogens, the distances traveled by the pathogens between infection events. The \verb1LANDSCAPE1 is the part of the model that determines how dispersion is defined. 
 
 To be truly plug-and-play, it must be possible to run a component in standalone mode, by passing the inputs from other components trivially as parameters. This is what we have done here. 
 
@@ -74,6 +87,8 @@ MASH is a framework for building models that is modular and flexible. This gives
 \end{itemize}
 %
 Species-level similarity is the default meaning of {\em \bf model} in MASH. Without some explicit way of mapping the state space, it is difficult to compare two models belonging to a different order. This hierarchical nomenclature system (borrowed from Linnaeus) makes it possible to talk about models defined by some other level of similarity (\eg model families).
+
+\clearpage 
 
 \section{Landscape}
 
@@ -107,6 +122,7 @@ The landscape provides the spatial template upon which objects from different co
 \paragraph{imagoQ} The imago is the mature adult insect. The \verb1imagoQ1 holds females emerging from aquatic habitats after pupation. This queue facilitates modularity by making it possible for any adult female module to interact with any ecology module describing immature aquatic forms.  
 
 
+\clearpage 
 
 \section{Mosquito Bouts}
 
@@ -492,6 +508,8 @@ induced seasonally, whenever certain conditions are met (\eg no
 rain). If a mosquito survives estivation, it initiates a blood
 feeding search bout at some point in the future.
 
+\clearpage 
+
 \section{Options}
 
 Other properties of a site include a set of queues that coordinate information sharing from one \verb1COMPONENT1 to another. 
@@ -630,6 +648,7 @@ mbites_restingSpot <- function(){
 \subsection{Time to Event} 
 
 
+\clearpage 
 
 \section{Aquatic Ecology}
 
