--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-BehavioralOptions.tex
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-BehavioralOptions.tex
@@ -96,7 +96,7 @@ MBITES can also be configured to have mosquitoes die from site-specific hazards 
 %
 \end{itemize}
 %
-These landing hazards can be distributed heterogeneously, and configured as part of the landscape. Two sliders in the MBITES-GUI make it possible toset parameters to affect how much mortality occurs as a result of flight stress compared with hazards. 
+These landing hazards can be distributed heterogeneously. The distribution is configured as part of the landscape. Two sliders in the MBITES-GUI make it possible toset parameters to affect how much mortality occurs as a result of flight stress compared with hazards. 
 
 The values given are set under a specific set of assumptions about the landscape configuration. Feedbacks between mortality and the frequency with which certain sites are visited can change the proportion of mortality occurring at each site. For this reason, we would like to emphasize that configuring MBITES to do something requires careful thought. We recommend running diagnostics after setting parameter values or changing some aspect of the landscape.  Even then, a simulation model can behave differently than expected (\eg because of population dynamic feedbacks). To put it another way, the MBITES-GUI is designed to help calibrate the model, but there will always be a need for analysis. 
 
